dataset1235/2025-2/805158916/users/69248557/executions/2651470117_3455942218.log
== SUBMISSION (2025-08-27 01:39:36)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - aj

# Impressao do valor total e do saldo:
print(total,round(total,2))
print(saldo,round(saldo,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0 -55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0 -1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0 -1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0 -8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999 -15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0 -195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:37:03)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - saldo

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:09)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total,round(total,1))
print(saldo,round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:43:57)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total,round(total,1))
print(saldo,round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0 -55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0 -1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0 -1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0 -8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999 -15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0 -195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:36:52)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - saldo

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = total - saldo
                    ^^^^^
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 02:13:51)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8) +45
saldo = vdisp - total
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:49)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total,round(total,1))
print(saldo,round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (vu*8)+45
             ^^
NameError: name 'vu' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:12:42)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:43:31)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total)
total = round(total,1))
print(saldo)
saldo = round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 14
    total = round(total,1))
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:44:39)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total,round(total,1))
print(saldo,round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0 -55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0 -1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0 -1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0 -8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999 -15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0 -195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:13:43)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8) +45
saldo = vdisp - total
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:43:15)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total)
round(total,1))
print(saldo)
round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 14
    round(total,1))
                  ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:49:03)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:42:39)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp

# Impressao do valor total e do saldo:
print(total,round(total,1))
print(saldo,round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0 -55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0 -1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0 -1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0 -8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999 -15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0 -195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:37:34)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - aj

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:13:10)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = int(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '900.0'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '310.0'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4200.00'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1000000.0'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '70.00'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '400.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:49:04)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = float(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:37:26)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - aj

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 02:13:08)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
vdisp = int(input("Qual que voce tem disponivel "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8)+45
saldo = total - vdisp
total = round(total, 2)
saldo = round(saldo, 2)
# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '900.0'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '310.0'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4200.00'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1000000.0'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '70.00'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vdisp = int(input("Qual que voce tem disponivel "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '400.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 01:39:29)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
aj = float(input("Qual o valor diposnivel? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8)+45
saldo = total - aj

# Impressao do valor total e do saldo:
print(total,round(total,2))
print(saldo,round(saldo,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-55.0 -55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-1.0 -1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-1307.0 -1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-8059.0 -8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-15.399999999999999 -15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-195.0 -195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
